--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,22 @@
         android:theme="@style/Theme.InformationBook"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.WondersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".adapters.AdapterClass$MuseumsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.LeadersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.CountriesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Countries"
+            android:exported="false" />
+        <activity
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
